Foi add mais um curso da Alura

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li>Curso CSS3</li>
             <li>Curso JAVASCRIPT</li>
             <li>Curso REACT</li>
+            <li>Curso Sass</li>
         </ul>
     </section>
 
